# sqlformat_ex

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mise.elixir17.toml  mise.elixir18.toml  mise.toml  mix.exs
.github/workflows/: release.yml  test.yml
lib/: sqlformat_ex.ex
native/sqlformatex/: Cargo.toml  README.md
native/sqlformatex/.cargo/: config.toml
native/sqlformatex/src/: lib.rs
test/: sqlformat_ex_test.exs  test_helper.exs
