[package]
name = "sqlformatex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "sqlformatex"
crate-type = ["cdylib"]

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]

[dependencies]
rustler = { version = "0.37.3", default-features = false, features = ["derive"] }
sqlformat = "0.5.0"
